Renamed interdomain plug id attributes, diagram adjustments.
- TapiTopology: aligned the inter domain plug id attribute names with
RIA. From interDomainPlugIdSapi, interDomainPlugIdDapi to resp.
plugIdInterDomainLocalId, plugIdInterDomainRemoteId.
- Adjusted associations: CEPIsSupportedByParentNEP,
RouteIsDescribedByCEPs, LinkSupportedByPhysicalSpan,
NodeEdgePointSupportedByAccessPort.
- updated TAPI UML gendoc document and Diff document

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,90 @@
+commit 30558e5fa122dc0f0f67c2f78bdb075be61324d3
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Aug 6 02:31:03 2021 +0200
+
+    Several modifications for release 2.3
+    
+    1.      TapiCommon, new enumeration ConditionName.
+    2.      TapiCommon, PmParameterName augments ConditionName.
+    3.      TapiCommon, SIP direction from RW to RO.
+    4.      TapiFm, PerceivedSeverityType, deprecated “CLEAR” severity.
+    5.      TapiFm, Deprecated AlarmCategory, replaced by DetectorCategory.
+    6.      TapiFm, AlarmConditionName augments ConditionName.
+    7.      TapiFm, added ConditionType enumeration.
+    8.      TapiFm, added SimpleDetectorState enumeration.
+    9.      TapiNotification, added new EventNotification signal for alignment to
+    Streaming, with spec classes DetectedCondition, PmMetricInfo,
+    DetectorInfo, SimpleDetector.
+    10.     TapiOam, OamJob, OamServicePoint reference from [1..*] to [0..*].
+    11.     TapiOam, OamJob, added reference by name to CEP for simple OAM tasks
+    like loopback.
+    12.     TapiOam, added to OamJob a reference to ConnectivityService, in case
+    the OamJob instance is not related to any OamService/Point but created
+    together with ConnectivityService through ConnectivityOamJob augment.
+    13.     TapiOdu, copied diagram comments to class comments.
+    14.     TapiPhotonicMedia, OtsiCapabilityPac, maxNumberOfOtsi and
+    supportedFecType from RW to RO.
+    15.     TapiPhotonicMedia PowerManagementCapabilityPac, all attributes from
+    RW to RO.
+    16.     TapiPhotonicMedia, copied diagram comments to class comments.
+    17.     TapiTopology, Link direction description "Is applicable to simple
+    Links where all LinkEnds are BIDIRECTIONAL (the Link will be
+    BIDIRECTIONAL) or UNIDIRECTIONAL (the Link will be UNIDIRECTIONAL)" is
+    removed.
+    18.     TapiTopology, comment on NEP/ inter-domain-plug-in-pac (ENNI
+    Identifier).
+    19.     Aligned the ObjectType enumerations for Notification and Streaming.
+
+commit 6e5ed6c71f4557de9640ee38dedf836fbcdf9659
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Sat Jun 19 01:06:49 2021 +0200
+
+    Removed Gendoc.docx
+
+commit dcc5ddaaa69734fe7b1effe91afdc7c7aad599b8
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Sat Jun 19 00:58:53 2021 +0200
+
+    Replace Gendoc.docx with .pdf
+    
+    TapiFm.di and .uml are same but result unstaged
+
+commit 8e10bbdc8fd0f5a3cef454a116fb7add492c0fee
+Merge: d93784b e4c1f7c
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Jun 18 16:00:57 2021 +0200
+
+    Merge pull request #512 from amazzini/develop
+    
+    Revision of diagrams and other minor corrections
+
+commit e4c1f7cdb286f07f749d899fcbe702b0ac9f39ce
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed Jun 9 12:21:33 2021 +0200
+
+    The complete TAPI Gendoc document
+
+commit 6028a327094b5b4e06fda9e0bcbb46e636c5be7e
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed Jun 9 02:28:16 2021 +0200
+
+    Revision of diagrams and other minor corrections
+
+commit d93784bbde24fe598ac5456d03a03d52ec75fee4
+Merge: 58cf441 df3d32b
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu May 27 09:08:01 2021 +0200
+
+    Merge pull request #511 from amazzini/develop
+    
+    Last pull request for 2.3 RC1 version
+
+commit df3d32b28d4f03b3b2b973078a518a9c8e20b9c4
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed May 26 16:36:05 2021 +0200
+
+    Changelog
+
 commit 8d2171bfedd8de1f3eb56d7c3c8704f416a42635
 Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Wed May 26 16:31:43 2021 +0200
@@ -806,5 +893,4 @@ Author: karthik-sethuraman <karthik.sethuraman@necam.com>
 Date:   Fri Jul 5 09:31:59 2019 -0400
 
     Change-log for version 2.2.0-RC3
-
 
