--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,17 @@
+commit 9c236e18649b0d5c1b74d0e673d1d21efe13fd09
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Aug 17 19:05:19 2021 +0200
+
+    Renamed interdomain plug id attributes, diagram adjustments.
+    
+    - TapiTopology: aligned the inter domain plug id attribute names with
+    RIA. From interDomainPlugIdSapi, interDomainPlugIdDapi to resp.
+    plugIdInterDomainLocalId, plugIdInterDomainRemoteId.
+    - Adjusted associations: CEPIsSupportedByParentNEP,
+    RouteIsDescribedByCEPs, LinkSupportedByPhysicalSpan,
+    NodeEdgePointSupportedByAccessPort.
+    - updated TAPI UML gendoc document and Diff document
+
 commit 30558e5fa122dc0f0f67c2f78bdb075be61324d3
 Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Fri Aug 6 02:31:03 2021 +0200
