Changelog and diff doc

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,148 @@
+commit fe2ab15048563048f5c989fae8645c4429b888fc
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Oct 14 19:30:00 2021 +0200
+
+    Added/improved comments.
+
+commit f78701aa2e871c8321e865f776c4350515488644
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Oct 14 15:16:53 2021 +0200
+
+    Adjustments to .yaml:
+    
+    1) "/:" --> ":"
+    2) /data/tapi-common:context/tapi-connectivity:connectivity-context:
+    ConnectivityContextWrapper --> ConnectivityContext
+
+commit 8108be56d18bd54aeb8acb1368d5a4ae9effd411
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Oct 14 01:35:04 2021 +0200
+
+    Diagram adjustments
+
+commit bce671091e85f23318842aefed9cbfeb70aab843
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed Oct 13 12:40:24 2021 +0200
+
+    TapiTopology, typo in LatencyCharacteristic, queing/queuing.
+
+commit 7fbb55df57886374ee9353200b708e3cf65f633a
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed Oct 13 09:02:17 2021 +0200
+
+    Minor diagram adjustments
+
+commit b07ada9d4d933b543caa112dd638cb20a26d9aeb
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Mon Oct 11 17:31:02 2021 +0200
+
+    Last UUID types.
+    
+    TapiConnectivity: ConnectivityConstraint, the connectionInclusion/Exclusion attributes are now of “connection” type, no longer the simple UUID.
+
+commit caa24ef111bedf81dce5ca25c2b6a99794991819
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Sat Oct 9 18:46:54 2021 +0200
+
+    Fixed InterRuleGroup augments ObjectNotification. Yang already ok.
+
+commit 771d60fb776a9dfde9a0ddb53bd0775c44e064c2
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Oct 8 17:44:55 2021 +0200
+
+    Removal of usesess associations to datatypes (no impact on yang)
+
+commit d432ba582ae1a59becccd9add74b63726b02adf1
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Oct 7 19:01:15 2021 +0200
+
+    Minor adjustments
+
+commit ae6a60a6d60071511b5b19726b3c163f95a5e5cf
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed Oct 6 19:41:23 2021 +0200
+
+    Minor corrections in packages (moving all associations/abstractions)
+
+commit 5f322e95b4d171e784271161ee6643668f8991c1
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed Oct 6 00:56:05 2021 +0200
+
+    Notification Type enum, added DETECTED_CONDITION to cover alarms/TCAs.
+    
+    Removed supportedNotificationTypes and supportedObjectTypes from
+    NotificationSubscriptionService and corrected the association between
+    NotificationSubscriptionService and SubscriptionFilter from 1 to 1 to  1
+    to 0..*
+
+commit c217373db2344e9882cbe57bdc05a9a13fef2c9f
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Sep 30 00:37:03 2021 +0200
+
+    Notification, Fm, Oam, PathComputation:
+    
+    TapiNotification: EventNotification signal includes two additional attributes: targetLocalObjectIdentifier, targetLocalObjectType.
+    TapiFm: updated comments of deprecated AlarmInfo and TcaInfo.
+    TapiOam: added LOOPBACK_TERMINAL and LOOPBACK_FACILITY Oam Job Types.
+    TapiPathComputation: TopologyConstraint, the include/excludePath attributes are now of “path” type, no longer the simple UUID.
+
+commit 035dfd298abd942749765243f0c618b8f82e8b8c
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Sun Sep 26 17:56:20 2021 +0200
+
+    Integration of Streaming and Fault Management
+    
+    Now TapiStreaming behaves similarly to TapiNotification, i.e. it is
+    positioned at the core of the TAPI model.
+    TapiStreaming "augments" have been distributed: Each technology agnostic
+    module specifies its own augments to Streaming (and Notification).
+
+commit 1be5b895101a1b556f3a909a2fcda0985e9f74eb
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Sep 21 18:52:07 2021 +0200
+
+    Restored TapiNotification as "core" module
+
+commit 617751fb457659578054ed355f1ea37cd70a60dc
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Sep 21 00:27:29 2021 +0200
+
+    Minor corrections on diagrams
+
+commit 78d64fbc0404f65f9b8f63a8a86adab05aef9c78
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Sat Sep 18 01:19:15 2021 +0200
+
+    Minor corrections
+
+commit 4c99b8da6ff7edae65eb0fa5a78272b79fe7a59d
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Sep 17 00:07:31 2021 +0200
+
+    Restructuring of TapiFm – TapiNotification – TapiStreaming relationships
+    
+    Now TapiNotification behaves similarly to TapiStreaming, i.e. it imports
+    all technology agnostic modules.
+    TapiFm is imported by both TapiStreaming and TapiNotification, where the
+    augments to TapiFm:DetectedCondition (and deprecated Alarm/TcaInfo) are
+    specified.
+    TapiFm is no longer imported by any other module, but only by
+    TapiNotification and TapiStreaming.
+
+commit 70f0e38f5281d4f1e86f1f69dc77e4afa4543913
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Sep 14 00:33:33 2021 +0200
+
+    Several modifications for pre-release 2.3.1
+    
+    See TAPI213vs23rc1Vs23Vs231.pdf for details
+
+commit 2c1f7d6805f1e96b93f25ddfa132cc0cb4c4d6c3
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Aug 17 19:41:44 2021 +0200
+
+    Updated changelog
+
 commit 9c236e18649b0d5c1b74d0e673d1d21efe13fd09
 Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Tue Aug 17 19:05:19 2021 +0200
@@ -907,4 +1052,3 @@ Author: karthik-sethuraman <karthik.sethuraman@necam.com>
 Date:   Fri Jul 5 09:31:59 2019 -0400
 
     Change-log for version 2.2.0-RC3
-
