--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,20 @@
+commit f6f1e61c5a524ef8b52b681794903f79d50d8b96
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed Mar 8 17:06:38 2023 +0100
+
+    Some final adjustments for 2.4.1
+    
+    - TapiFm: DetectedCondition augments the new ActiveCondition, composed
+    by the new FaultManagementContext.
+    - TapiOam: identity wrongly in package diagrams
+    - TapiTopology/Notification/PathComp/Oam/VirtualNtw: Comments
+
+commit e36a8030a2e2330e403da96e1be6d7325f853aa2
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Feb 28 11:58:18 2023 +0100
+
+    Updated changelog
+
 commit d5fb9f9d2355f501ddcb0efe3cf58a8e13fb7288
 Merge: 24903eb da99cb3
 Author: amazzini <andrea.mazzini@nokia.com>
@@ -1318,6 +1335,5 @@ Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Thu Oct 14 23:23:13 2021 +0200
 
     Changelog and diff doc
-
 
 ---> Change-log for version 2.3.1
