Last commit for 2.4.1
TapiPhotonic: readonly on PowerProperties/powerSpectralDensity.
Published TR-547-TAPI Reference Implementation Agreement_v2.1
Published TapiGenDoc_v2.4.1
Published TAPI_Alarm_TCA_List_v2.1.0
Published HighLevelDiff_Tapi2.1.3To2.4.1

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,33 @@
+commit 00f484ab7cb8f52da38694f7e3c6becaedc09704
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Mar 16 17:18:24 2023 +0100
+
+    Updated the YANG revision dates
+
+commit 69ed6792d2007c7719f00a75ec91a23cb01a0139
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed Mar 15 14:53:35 2023 +0100
+
+    Remove of CHANGE_LOG directory
+
+commit b81b113ad7c68bd019b5e0a839301838e732a232
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Mar 14 19:09:40 2023 +0100
+
+    Removal of Gendoc directory
+
+commit c79964575cabb53195fa7d81e48f3abeaba60ab6
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Mar 10 17:51:56 2023 +0100
+
+    Further minor refinements
+
+commit 625527108e29569795a938b3806f7fde8c38bbc7
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed Mar 8 18:09:33 2023 +0100
+
+    Updated changelog
+
 commit f6f1e61c5a524ef8b52b681794903f79d50d8b96
 Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Wed Mar 8 17:06:38 2023 +0100
