last changelog for 2.4.1

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,15 @@
+commit 6422700284bddab39bd14b3c743b2ca879018a3c
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Mar 23 19:23:05 2023 +0100
+
+    Last commit for 2.4.1
+    
+    TapiPhotonic: readonly on PowerProperties/powerSpectralDensity.
+    Published TR-547-TAPI Reference Implementation Agreement_v2.1
+    Published TapiGenDoc_v2.4.1
+    Published TAPI_Alarm_TCA_List_v2.1.0
+    Published HighLevelDiff_Tapi2.1.3To2.4.1
+
 commit 00f484ab7cb8f52da38694f7e3c6becaedc09704
 Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Thu Mar 16 17:18:24 2023 +0100
