--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,72 @@
+commit 4421a9635d3ef467f18a9d7eedd398b605dff5a3
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Apr 18 18:38:59 2023 +0200
+
+    Last minor enhancement to version TR-547 2.1
+
+commit 70adf80fcf6460feff4423ab4d2e1bef5be51f05
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Mon Apr 17 18:53:55 2023 +0200
+
+    Minor corrections to TR-547 2.1
+
+commit 8c570a3b868e90d50c44b8e521cf9a29aedd5800
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Mar 30 15:13:25 2023 +0200
+
+    Removal of RI (Reference Implementation) directory
+
+commit c7cd9c7cc8e25a3678b85f1b8a5814c5df4fe88a
+Merge: ea0a454 5152bd0
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Sun Mar 26 05:19:06 2023 +0100
+
+    Merge pull request #535 from amazzini/develop
+    
+    Update README.md
+
+commit 5152bd0ffefd4acc7ae0309dfafe3583a59d7448
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Sat Mar 25 15:55:24 2023 +0100
+
+    Update README.md
+
+commit ea0a4544d0091cd9da1a1a32f0f1f701d7dcafa4
+Merge: ab749ef 9cca902
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Sat Mar 25 05:50:14 2023 +0000
+
+    Merge pull request #534 from amazzini/develop
+    
+    Published TR-548 Streaming
+
+commit 9cca902ad52c0cd4623d42a015550c7d0c765c9c
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Mar 24 12:21:53 2023 +0100
+
+    Typos in Alarm List spreadsheet
+
+commit cb5b946d2b0ee7c5b6899975bcde4f3ce9be38dc
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Mar 24 12:05:36 2023 +0100
+
+    Published TR-548 Streaming
+
+commit ab749ef0bf63da10b846e4a30d2992b5b541617a
+Merge: d5fb9f9 814b1bd
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Mar 24 10:25:38 2023 +0100
+
+    Merge pull request #533 from amazzini/develop
+    
+    Updated changelog
+
+commit 814b1bd562b114b4f6830052a6293cdd6658e31e
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Mar 23 19:26:37 2023 +0100
+
+    last changelog for 2.4.1
+
 commit 6422700284bddab39bd14b3c743b2ca879018a3c
 Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Thu Mar 23 19:23:05 2023 +0100
