Possibly last commit for 2.5.0 RC1
- RIA 547 3.0
- High Level Differences
- Changelog
- All YANG modules, references to 2.5 now 2.5.0
- Alarm List
- Notification and Streaming Sequences
- UML2YANG Tool User Guide
- Gendoc dumps

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,414 @@
+commit 6b1241fe96f8c2a4cf688694d78046b45c509150
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Mon Oct 16 23:25:46 2023 +0200
+
+    Tree and OAS updated modules
+
+commit 6ebf0339e28fa6da33de822ae2f6d15d6575dc6e
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Sun Oct 15 23:47:57 2023 +0200
+
+    Minor corrections
+    
+    TapiCommon and TapiGnmiStreaming
+
+commit c24f78fdfbae0fcecc6a0b4b8b38e469257a19dd
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Mon Oct 9 16:02:39 2023 +0200
+
+    First commit of TAPI 2.5 final draft model
+    
+    - All modules: Deleted all interfaces.
+    - TapiOam, TapiDigitalOtn (OAM) and TapiPhotonicMedia (OAM): Several
+    changes (new classes OamJobService and OamJobDescriptor, completely
+    changed the PM reporting model, deprecated CurrentData and decoupled
+    HistoryData from OAM Job, harmonised embedded and independent
+    provisioning modes).
+    - TapiTopology: some Link parameters moved to RW to support link
+    management use cases.
+    - TapiCommon: enhanced the optical PM parameters
+    - TapiCommon: PmParameterValue enhanced with MetricValueType
+    - Cleaned some garbage of TapiPhotonicMedia.uml, likely dangling
+    references to Geolocation, moved to TapiEquipment.
+
+commit 771175169f4d5e52e501e6997745dbee35d97098
+Merge: 04706ce b19b5b3
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Mon Oct 9 13:52:36 2023 +0200
+
+    Merge pull request #554 from nigel-r-davis/develop
+    
+    Changing name from TapiStreamingGnmi to TapiGnmiStreaming
+
+commit b19b5b3665b813873e5ec1b2bb74da70738a8c7c
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Mon Oct 9 12:50:18 2023 +0100
+
+    Changing name from TapiStreamingGnmi to TapiGnmiStreaming
+
+commit 04706ce8f7d6844f45455fd1f07571f89a73156d
+Merge: b9acf22 53ced28
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Mon Oct 9 13:44:52 2023 +0200
+
+    Merge pull request #553 from nigel-r-davis/develop
+    
+    Imporvements to layout of diagrams for gendoc generation
+
+commit 53ced285cc9cf6f1ca7d1c4d7cbbe9e8326440e4
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Mon Oct 9 11:17:23 2023 +0100
+
+    Imporvements to layout of diagrams for gendoc generation
+    
+    Diagrams were constructed with Windows set to 100%.
+    
+    For gendoc generation I have viewed the diagrams at 150% and have
+    resized as necessary.
+    
+    This is caused by an issue in Papyrus.
+
+commit b9acf22a3cfacfab55da62e95f0595428673a4ec
+Merge: f819bd0 f566b93
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Tue Sep 26 10:57:18 2023 +0100
+
+    Merge pull request #550 from nigel-r-davis/develop
+    
+    TAPI gNMI streaming finalization
+
+commit f566b93daadbf893b1057ca5630c4eb31e657138
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Wed Sep 20 12:32:39 2023 +0100
+
+    Additional Info added to QualifiedMeasurementCommon
+    
+    Enables additional data related to the measurement to be conveyed in
+    string form.
+
+commit 12ec88a4b59c03401d8083712a15d9f0bc1fb80b
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Wed Sep 20 11:49:24 2023 +0100
+
+    Minor improvement to comment on PathElem key
+    
+    Explains that this property is a protobuf map.
+
+commit de3516293e5b14c7dea3ec7f66735c18c61d0be0
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Wed Sep 13 15:27:00 2023 +0100
+
+    The name of the extended composite class "Measurement" changed
+    
+    Extended composite names are not reflected in the YANG/protobuf,
+    however, it is important to reflect the purpose carefully. The has also
+    been updated. The structure allows for future extension with other
+    structure.
+
+commit f2c7d727d9f4c06b6d4147c61fa09f089dab4ede
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Wed Sep 13 15:23:01 2023 +0100
+
+    Contents structure updated to ensure property order is as per enum
+    
+    The previous structure did not allow the YANG property order to match
+    the protobuf enumeration order. The UML model now has two
+    QualifiedMeasurementCommon structures to hold properties 1-10 and 12
+    onwards so 11 can be placed between.
+
+commit b8aa23054591a2b7354a7b04f69cfd70be8fd79d
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Mon Sep 11 13:20:07 2023 +0100
+
+    NormalizedMeasurememtType corrected to isLeaf true.
+
+commit c35a6dfb00c11e69bc65668c51056c4ed0c7747f
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Mon Sep 11 11:33:55 2023 +0100
+
+    TypedValue property proto_bytes no longer renamed
+    
+    In previous versions, the proto_bytes property was renamed to
+    _streamDetails. It has now been returned to _protoBytes (as this is the
+    gNMI standard name and there is no need to rename. Clearly the rename
+    has no essential impact as the protobuff enumeration value is 13, which
+    is what is conveyed on the wire. The type is unchanged (still
+    StreamDetails).
+
+commit 64d05bed13a423dcf386a191e397e84ac0661484
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Mon Sep 11 10:03:38 2023 +0100
+
+    Corrections to comments and to _val
+    
+    GNMI spec identifies the property   TypedValue val = 3; in message
+    Update. This was incorrectly called typedValue (now called _val in UML).
+
+commit b2c6e13be5b4493f5468c3ac333191ca258af42e
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Wed Aug 30 09:39:57 2023 +0100
+
+    Minor improvements to diagrams
+
+commit 727e73b39a43deac688e6299de0ca9e1aae62f79
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Tue Aug 29 16:39:33 2023 +0100
+
+    Normalization of PMs (continued)
+    
+    normalizedMeasurementType now of type Pm (from common) and Pm
+    enumeration added to diagrams. Diagrams rearranged slightly to
+    accommodate.
+
+commit 15f39d6ff65afa612246da9c1b2578813e40d15d
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Fri Aug 25 23:32:36 2023 +0100
+
+    <<ExtendedComposite>>, NOT_APPLICABLE clash and isLeaf true
+    
+    Augmentations replaced by <<ExtendedComposite>> as augmentations were
+    introducing unnecessary layers.
+    
+    NOT_APPLICABLE in DirectionOfMeasuredSignal replaced with NO_DIRECTION
+    (some protobuf tooling was complaining about use of NOT_APPLICABLE label
+    in 2 different Enumerations - not clear why!).
+    
+    isLeaf true in all enumerations as these are NOT identities.
+    Enumerations in this model are unlikely to need extension. Assumption is
+    that extension will be carried out if necessary, from release to
+    release, by adding to the end of the list and ensuring that no values
+    are ever removed (simply deprecated). Extension by external parties is
+    not recommended (as there will be enumeration clashes).
+
+commit b7043bc63c8ecb9b14f67704756b642d8be359d1
+Merge: d6a4bc9 c6ca44f
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Fri Aug 25 21:49:39 2023 +0100
+
+    Merge branch 'develop' of https://github.com/nigel-r-davis/TAPI into develop
+
+commit d6a4bc94f2bcd1edd9ce36e3cd43ea7b43f9a077
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Fri Aug 25 21:48:02 2023 +0100
+
+    Adding qualifiedMeasurementType
+    
+    This allows for multi-type measurements. In conjunction with
+    qualifiedValueName and qualifiedLocationName the solution will deal with
+    cases where there is more than one detector of the same type (i.e., on
+    more than one signal in the TP), where that detector measures more than
+    one aspect of the signal and an aspect can have min, max and mean
+    values.
+
+commit c6ca44fc0c3c0df73b555fc4acd37951153d1a2d
+Merge: 0d563be f819bd0
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Fri Aug 25 17:34:20 2023 +0100
+
+    Merge branch 'OpenNetworkingFoundation:develop' into develop
+
+commit f819bd07ebfa65c3f671b243f7222c636a9aaed9
+Merge: 48f2fd2 a2d1c05
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Fri Aug 25 17:32:42 2023 +0100
+
+    Merge pull request #545 from amazzini/develop
+    
+    Some modifications for 2.5
+
+commit 0d563beb7dfe5c803b39fdc0b0eee88ef74fe0df
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Fri Aug 25 13:46:27 2023 +0100
+
+    Protobuf notification prefix
+    
+    prefix in Notification was incorrectly called path. This has now been
+    corrected.
+
+commit 00660644fdf7db37f277f807c6a32710c4ea5dfb
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Fri Aug 25 10:23:23 2023 +0100
+
+    Augment conditions removed.
+    
+    Conditions were in place on the augments that were not necessary and
+    were causing a UML error. These have been removed.
+
+commit 74669e34cdf3b227aebd2ba267a9e6838db5a688
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Fri Aug 25 10:04:42 2023 +0100
+
+    Enumeration label changed
+    
+    BOTH_CONTRA_RECEIVE_AND_CONTRA_TRANSMIT changed to
+    CONTRA_RECEIVE_AND_CONTRA_TRANSMIT as it was too long for YANG.
+    
+    BOTH_RECEIVE_AND_TRANSMIT also changed (to RECEIVE_AND_TRANSMIT) to
+    align.
+
+commit 1f1d05cf1cdffc5084d1e8baf6b001684f0ae32c
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Fri Aug 25 09:51:31 2023 +0100
+
+    Addition of comment on "target"
+
+commit a97b364021da3d31af3ad736e7ca53b13b9baed4
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Thu Aug 24 16:12:34 2023 +0100
+
+    Preparation for delivery
+    
+    Conditions added to all attribute descriptions.
+    Read/Write and Invariant statements corrected for all attributes.
+    Diagrams improved (broken into several separate diagrams).
+    qualifiedLocationName added to QualifiedMeasurementValue to allow for
+    case where there are several parts of the resource that have identical
+    measures.
+    Some descriptions improved.
+
+commit 25f9f4a8e29dbc21126d37f00845a7f51fb889a7
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Wed Aug 23 17:40:53 2023 +0100
+
+    Removal of redundant comments
+
+commit e2323707a30fd58b6173386f0772aadbe318add3
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Tue Aug 22 13:50:38 2023 +0100
+
+    GNMI Streaming model
+
+commit a2d1c05ead8b04864ae0e6b5d3f5fcbddb2bc855
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Aug 3 14:41:01 2023 +0200
+
+    Some modifications for 2.5
+    
+    - TapiCommon: deleted the deprecated AlarmName and PmParameterName
+    identities.
+    - TapiCommon: added some PM_FEC error counters to PM identity.
+    - TapiDigitalOtn: deleted the deprecated OtnAlarmConditionName.
+    - TapiPhotonicMedia: new import of tapi-path-computation, for the new
+    photonic-position structure, augmenting include/exclude Node/Link
+    Partition.
+    - TapiOam: added some experimental classes:
+      + oam-pm-data augments CEP.
+      + new classes composed by OamContext: cep-fm-data, mip-pm-data,
+    mep-pm-data, cep-pm-data, oam-job-service, oam-job-descriptor.
+      + ConnectivityOamService, added connectivity-oam-service-parameters,
+    for the OAM parameters which are applicable to the whole Connectivity
+    Service (e.g. general enabling of alarms of a service).
+      + New class OamJobService composes new class PmParameterConfig.
+    - TapiOam: ConnectivityOamService --> ConnectivityOamServicePoint from
+    1..* to *, i.e. a ConnectivityOamService instance may not have any
+    service point.
+    - All modules: Added 2.5 revision to all yangs.
+
+commit 94f37dd5a674351c61892c56e7681a65f34249d4
+Merge: ec05013 48f2fd2
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Jul 25 16:56:26 2023 +0200
+
+    Merge remote-tracking branch 'Main/develop' into develop
+
+commit 48f2fd242c9f2b20157a2ba461b1505befe9f415
+Merge: db37a69 d5cc115
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Jul 25 16:52:59 2023 +0200
+
+    Merge pull request #543 from nigel-r-davis/develop
+    
+    Protobuf properties added to OpenInterfaceModel_Profile
+
+commit d5cc11586ec46afb343a8c04b0f9a5ae0b3b1569
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Mon Jul 24 19:35:02 2023 +0100
+
+    Protobuf properties added to OpenInterfaceModel_Profile
+    
+    protobufEnumeration added to OpenInterfaceModelAttribute.
+    OpenInterfaceEnumeration added with protobufEnumeration property.
+    Diagram cleaned.
+    
+    (note that there have been several intermediate releases since the last
+    published release)
+
+commit db37a69ed535a19c1af1881e2a09b8697583a427
+Merge: a5b5073 5479f18
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue May 23 21:40:26 2023 +0200
+
+    Merge pull request #541 from amazzini/develop
+    
+    Several modifications - UML only:
+
+commit ec05013764177a3cee8c51104e02ac9db6066a86
+Merge: 5479f18 a5b5073
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu May 11 19:08:11 2023 +0200
+
+    Merge remote-tracking branch 'Main/develop' into develop
+
+commit 5479f1804d45ccfe73975491b33bf417b3745e06
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu May 11 19:06:43 2023 +0200
+
+    Several modifications - UML only:
+    
+    - TapiTopology: Added comment (rule profile) to node rule group diagram.
+    - TapiCommon: Added experimental enhancements to PayloadStructure for
+    “colorless” NEP capability.
+    - TapiConnectivity: Added reference to [0..*] CEPs to SwitchOperation.
+    - TapiConnectivity: Connection composes the PathUsageDescriptor.
+    - TapiConnectivity: ConnectivityService can compose
+    TapiPathComputation:PathSetConstraint.
+    - TapiConnectivity: New classes composed by ConnectivityService:
+    PathSetConstraintForCs, PathConstraintForCs.
+    - TapiConnectivity: New class composed by Connection:
+    PathUsageDescriptor.
+    - TapiConnectivity: New classes ConnectionAndRouteConstraint and
+    ConnectionAndRoute augments TapiPathComputation:TopologyConstraints.
+    Three abstractions for the three positions of TopologyConstraint in the
+    tree.
+    - TapiPathComputation: Added classes PathSet, PathSetConstraint,
+    PathConstraint.
+    - TapiPathComputation: Removed IncludePath and excludePath from
+    TopologyConstraint, created a dedicated class for PathAsConstraint.
+    - TapiPathComputation: PSEP can also reference the NEP, besides the SIP.
+    13.     TapiPathComputation: The Path may be described also by an ordered
+    set of NEPs, besides the Links.
+    14.     TapiPathComputation: Added class AdoptOrphanPath, composed by
+    PathComputationService.
+    15.     TapiPathComputation: Added include/exclude Node/Link position to
+    TopologyConstraint.
+    - TapiEquipment: Typo in comment.
+    - TapiOam: Comments.
+    - TapiPhotonic: Comments.
+
+commit a5b5073dd81f90f2fbccb91922ccaf23f7d5aa89
+Merge: f22a394 6b7188e
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed Apr 19 14:19:31 2023 +0200
+
+    Merge pull request #539 from amazzini/develop
+    
+    Updated changelog
+
+commit 6b7188e56a5bf72b296cb92e2b4948d34613e139
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Apr 18 18:44:13 2023 +0200
+
+    Updated changelog
+
+commit f22a394fd6358a464e63a3a0d5eada4bad71a417
+Merge: d5f2386 4421a96
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Apr 18 18:40:04 2023 +0200
+
+    Merge pull request #538 from amazzini/develop
+    
+    Minor corrections to TR-547 2.1
+
 commit 4421a9635d3ef467f18a9d7eedd398b605dff5a3
 Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Tue Apr 18 18:38:59 2023 +0200
@@ -9,6 +420,15 @@ Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Mon Apr 17 18:53:55 2023 +0200
 
     Minor corrections to TR-547 2.1
+
+commit d5f23864e15eb4468491d15c3c1b039ec8695034
+Merge: c7cd9c7 8c570a3
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Mon Apr 17 18:43:46 2023 +0200
+
+    Merge pull request #536 from amazzini/develop
+    
+    Removal of RI (Reference Implementation) directory
 
 commit 8c570a3b868e90d50c44b8e521cf9a29aedd5800
 Author: amazzini <andrea.mazzini@nokia.com>
@@ -1446,5 +1866,6 @@ Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Thu Oct 14 23:23:13 2021 +0200
 
     Changelog and diff doc
-
+	
 ---> Change-log for version 2.3.1
+
