last changelog for 2.5.0

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,193 @@
+commit c967b052b963198b6cc4ae189378107a0924c324
+Merge: 5063238 f4ff7b2
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Nov 3 09:18:15 2023 +0100
+
+    Merge pull request #564 from nigel-r-davis/develop
+    
+    TR-548 with corrected YANG, gNMI and UML
+
+commit f4ff7b205130ae65218c36c053cac21d9f358581
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Thu Nov 2 23:48:48 2023 +0000
+
+    TR-548 with corrected YANG, gNMI and UML
+    
+    Model descriptions etc. updated to align with changes made to deal with defaults.
+
+commit 506323831eb324961a087a1b71d5b57aa23effe6
+Merge: ba50985 4f45f6d
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Thu Nov 2 23:06:25 2023 +0000
+
+    Merge pull request #563 from amazzini/develop
+    
+    Correction to diagrams, Connectivity and Oam comments.
+
+commit 4f45f6d3d80079f7d93d33bb90669b7f3d8755c7
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Nov 2 18:41:51 2023 +0100
+
+    Further minor corrections to diagrams
+
+commit bf099bafeee2015f95623dc2e4269738bf9d8b25
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Nov 2 17:26:45 2023 +0100
+
+    Correction to diagrams, Connectivity and Oam comments.
+
+commit ba50985c6b621fa5795ca38175f4fcbb19163c7d
+Merge: a6677f0 1f05ee4
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Thu Nov 2 08:37:41 2023 +0000
+
+    Merge pull request #562 from amazzini/develop
+    
+    Commit for TAPI 2.5.0
+
+commit 1f05ee40fb578776116d180908d4a64152a83882
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Nov 2 00:07:54 2023 +0100
+
+    Commit for TAPI 2.5.0
+    
+    - amended tapi-gnmi-streaming (uml, yang, oas, gendoc)
+    - amended tapi-equipment (references to profile) (uml, yang, tree, oas,
+    gendoc)
+    - updated tapi-tree
+    - amended TR-547 v3.1
+
+commit a6677f0565fdccc1add3b892606696d3afbd2e4d
+Merge: 502271e df00ea7
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue Oct 31 12:23:53 2023 +0100
+
+    Merge pull request #561 from nigel-r-davis/develop
+    
+    Corrected gNMI enumeration defaults (and other minor improvements)
+
+commit df00ea739fcd74fe19646858ceb48ea6e435060f
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Tue Oct 31 11:15:26 2023 +0000
+
+    Corrected gNMI enumeration defaults
+    
+    ValueQualifier
+    a. comment positioned correctly in ValueQualifier not in SampleQualifier
+    (minor)
+    b. updated to have default (0) literal of OK
+    c. literals all shifted by 1 to accommodate “OK”
+    d. usage in QualifiedMeasuredValue set default to OK
+    
+    SampleQualifier
+    a. updated to have default (0) literal of NORMAL
+    b. literals all shifted by 1 to accommodate “NORMAL”
+    c. usage in QualifiedMeasurementCommon1To10 set default to NORMAL
+    
+    DirectionOfMeasuredSignal
+    a. comment on NO_DIRECTION in DirectionOfMeasuredSignal improved to
+    allow it to be used as a default (0) where the direction is obvious from
+    the measurement type
+    b. usage in QualifiedMeasurementCommon1To10 set default to NO_DIRECTION
+    
+    NormalizedMeasurementType
+    a. updated to have default (0) literal of NO_NORMALIZED_TYPE
+    b. literals all shifted by 1 to accommodate “NO_NORMALIZED_TYPE”
+    c. usage in QualifiedMeasurementCommon1To10 set default to
+    NO_NORMALIZED_TYPE
+    d. was not aligned with pm
+           i.    DELAY updated to DELAY_FRAME_COUNT
+           ii.   OPTICAL_POWER_INPUT changed to OPT_TOTAL_PWR_INPUT
+           iii.  OPTICAL_POWER_OUTPUT changed to OPT_TOTAL_PWR_OUTPUT
+           iv.   OPT_PWR_SPECTR_DENS_INPUT added
+           v.    OPT_PWR_SPECTR_DENS_OUTPUT added
+           vi.   VOA_INPUT added
+           vii.  VOA_OUTPUT added
+    
+    Further enhancements
+    a. associations in TypeDefinitions moved to associations
+    b. comments on default literals improved
+    c. diagrams updated
+
+commit 502271e385f557fc63a727b3e81cbf93be4c4343
+Merge: 71537cb 84e6739
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Thu Oct 19 23:07:40 2023 +0100
+
+    Merge pull request #560 from amazzini/develop
+    
+    Possibly last commit for 2.5.0 RC1
+
+commit 84e673968b3256b531459acbc19c5c0a433daf24
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Oct 19 18:23:49 2023 +0200
+
+    Possibly last commit for 2.5.0 RC1
+    
+    - RIA 547 3.0
+    - High Level Differences
+    - Changelog
+    - All YANG modules, references to 2.5 now 2.5.0
+    - Alarm List
+    - Notification and Streaming Sequences
+    - UML2YANG Tool User Guide
+    - Gendoc dumps
+
+commit 71537cbe18d7f6c7bebafb12c195bf90cf7558d9
+Merge: 5a8274a b40b145
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Oct 19 14:57:35 2023 +0200
+
+    Merge pull request #559 from nigel-r-davis/develop
+    
+    Final correction to YANG tree and YANG for gNMI Streaming
+
+commit b40b145a3e25e5e9098cd9fd40be4056ac3306f4
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Wed Oct 18 08:32:30 2023 +0100
+
+    Final correction to YANG tree and YANG for gNMI Streaming
+
+commit 5a8274a545898bda26f770a7ef7450752c0aa58a
+Merge: c86b353 c902396
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Wed Oct 18 05:35:54 2023 +0100
+
+    Merge pull request #558 from nigel-r-davis/develop
+    
+    TR-548 updates for TAPI 2.5.0
+
+commit c86b353671dc013e16a37eb75c658372786151fd
+Merge: f261684 6b1241f
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Tue Oct 17 14:14:31 2023 +0100
+
+    Merge pull request #557 from amazzini/develop
+    
+    Tree and OAS updated modules
+
+commit c902396d4014665ace33b66e4cc0f0b291fda846
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Tue Oct 17 11:48:34 2023 +0100
+
+    TR-548 updates for TAPI 2.5.0
+    
+    Update to TR-548 for publication for TAPI 2.5.0.
+
 commit 6b1241fe96f8c2a4cf688694d78046b45c509150
 Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Mon Oct 16 23:25:46 2023 +0200
 
     Tree and OAS updated modules
+
+commit f2616847a70b6f58998a4890bcd4c27ac6bf4060
+Merge: a2d04fa 6ebf033
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Mon Oct 16 16:27:03 2023 +0100
+
+    Merge pull request #556 from amazzini/develop
+    
+    Minor corrections
 
 commit 6ebf0339e28fa6da33de822ae2f6d15d6575dc6e
 Author: amazzini <andrea.mazzini@nokia.com>
@@ -11,6 +196,15 @@ Date:   Sun Oct 15 23:47:57 2023 +0200
     Minor corrections
     
     TapiCommon and TapiGnmiStreaming
+
+commit a2d04fadd9496a26d6e8fb7c531247d756d73bb7
+Merge: 7711751 c24f78f
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Wed Oct 11 09:46:01 2023 +0100
+
+    Merge pull request #555 from amazzini/develop
+    
+    First commit of TAPI 2.5 final draft model
 
 commit c24f78fdfbae0fcecc6a0b4b8b38e469257a19dd
 Author: amazzini <andrea.mazzini@nokia.com>
@@ -1866,6 +2060,6 @@ Author: amazzini <andrea.mazzini@nokia.com>
 Date:   Thu Oct 14 23:23:13 2021 +0200
 
     Changelog and diff doc
-	
+
 ---> Change-log for version 2.3.1
 
